--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "build": "node --max_old_space_size=6096 node_modules/@vue/cli-service/bin/vue-cli-service.js build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@sweetalert2/theme-material-ui": "^5.0.10",
@@ -52,6 +49,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
