--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vue-tailwind": "^2.5.1",
     "vue3-pdfjs": "^0.1.6",
     "vue3-timepicker": "^1.0.0-beta.2",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
