--- a/.env-dev
+++ b/.env-dev
@@ -1,11 +1,9 @@
 #APPLICATION
-VUE_APP_SERIAL=G3DN12D4MDA3WS
-VUE_APP_NAME=Machawi265 
-VUE_APP_SHORT_NAME=WWE
+VUE_APP_SERIAL=G3DN12D4MDA3WSS
+VUE_APP_NAME=Designed by WFP Supply Chain  
+VUE_APP_SHORT_NAME=COMMODITY TRACKING SYSTEM
 VUE_APP_VERSION=1.0.0
 #ENDPOINTS
-VUE_APP_ROOT_API=http://localhost:4000
-
-VUE_APP_MAIL_API=http://localhost:3500
-
-VUE_APP_MAIL_TO= chalera4@gmail.com
+VUE_APP_ROOT_API=http://localhost:4500
+VUE_APP_MAIL_API=http://localhost:4500
+VUE_APP_MAIL_TO= info@cts.immalawi.org
