--- a/.env-prod
+++ b/.env-prod
@@ -1,10 +1,9 @@
 #APPLICATION
-VUE_APP_SERIAL=G3DN12D4MDA3WS2MDA
-VUE_APP_NAME=Machawi265
-VUE_APP_SHORT_NAME=machawi
+VUE_APP_SERIAL=G3DN12D4MDA3WSS
+VUE_APP_NAME=Designed by WFP Supply Chain  
+VUE_APP_SHORT_NAME=COMMODITY TRACKING SYSTEM
 VUE_APP_VERSION=1.0.0
 #ENDPOINTS
-VUE_APP_ROOT_API=https://engine.kwika.events
-VUE_APP_MAIL_API=https://engine.kwika.events
-VUE_APP_MAIL_TO= wnmwanza@gmail.com
-VUE_APP_URL = https://engine.kwika.events
+VUE_APP_ROOT_API=https://engine.immalawi.org/cts
+VUE_APP_MAIL_API=https://engine.immalawi.org/cts
+VUE_APP_MAIL_TO= info@cts.immalawi.org
