--- a/.env-prod
+++ b/.env-prod
@@ -1,6 +1,6 @@
 #APPLICATION
 VUE_APP_SERIAL=G3DN12D4MDA3WSS
-VUE_APP_NAME=Designed by WFP Supply Chain  
+VUE_APP_NAME=WFP Malawi Supply Chain Unit | DoDMA  
 VUE_APP_SHORT_NAME=COMMODITY TRACKING SYSTEM
 VUE_APP_VERSION=1.0.0
 #ENDPOINTS
