--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.4",
+    "favicons": "^7.2.0",
+    "favicons-webpack-plugin": "^6.0.1",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
     "sass": "^1.49.9",
